# rasp_robot

./: .gitignore  AGENTS.md  pyproject.toml
Robodelta.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
auxiliar/: hola.py  servo.py
calibration/: Resumen.md  cal_pulse.py  calibrate_servo.py  config_servo.py
doc/: kinematics_equations.md
file_config/: config_servos.py
src/: main.py
src/config/: config.toml  config_servos.toml  robot copy.toml  robot.toml
src/control/: ControlInterface.py  control_interface.py  gait_inteface.py
src/gait/: bezier_gait.py
src/hardware/: Resumen.md  Servo.py  ServoController.py  abort_controller.py  hardware_manager.py  servos_power_controller.py
src/kinematics/: Forward.py  Inverse.py  RobotModel.py  forward.py  inverse.py  lib_algebra.py  robot_model.py
src/utils/: channels_configurator.py  config.py  logger.py  logs.py  servo.py  servo_configurator.py  servo_repository.py  toml_loader.py
test/: inverse.py  kinematics.py  plot_gait_pattern.py  test_forward_kinematics.py  test_gait_modulator.py  test_inverse_kinematics.py
