[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Robodelta"
version = "2.0.0"
description = "Robot Cuadrupedo"
authors = [
    {name = "albortas",email = "garlad628@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
# Aqui van las librerias que funcionan en AMBOS lados
dependencies = [
    "numpy",
    "matplotlib (>=3.10.7,<4.0.0)",
    "scipy (>=1.16.3,<2.0.0)",
    "pygame",
    "pick",
    "tomlkit"
]

# AQUI ESTA LA MAGIA: Dependencias opcionales
[project.optional-dependencies]
pc = [
    # Aqui pones librerias que solo usas para probar en la pc
]
rpi = [
    # Aqui van las librerías exclusivas de la Raspberry Pi
    "adafruit-circuitpython-pca9685",
    "adafruit-circuitpython-motor",
]

[tool.setuptools.packages.find]
where = ["."]